# diyabc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  TODO  build.cmd  build.fsx  paket.dependencies
.github/workflows/: bump.yml  cmake.yml
Notice-DIYABC-v2/: Implementation.tex  gui_description.tex
abcranger/: CMakeLists.txt  abcranger.cpp  abcranger.hpp  mainrangertest.cpp
dcmt0.6.1/: CMakeLists.txt
diyabc-tests/MER/modelchoice/IndSeq/: INDSNP_sim_dataset_4POP_001.snp
diyabc-tests/example-dna/: header.txt  toytest2_micro_seq_complexe_001.mss
regextest/: CMakeLists.txt  main.cpp
src-JMC-C++/: CMakeLists.txt  acploc.cpp  acploc.hpp  bias.cpp  bias.hpp  comparscen.cpp  comparscen.hpp  conf.cpp  conf.hpp  data.cpp  data.h  data.hpp  estimparam.cpp  estimparam.hpp  fst.c  general-test.cpp  general.cpp  global.hpp  header.cpp  header.hpp  history.cpp  history.hpp  initRNGproject.cpp  matrices.cpp  matrices.hpp  mesutils.cpp  mesutils.h  mesutils.hpp  modchec.cpp  modchec.hpp  particleset.cpp  particleset.hpp  particuleC.cpp  particuleC.hpp  randforest.cpp  randforest.h  randforest.hpp  randgen.cpp  randomgenerator.cpp  randomgenerator.h  (+17 more)
test/f3reich/pool/: f0.pool  header.txt
test/f3reich/snp/: f0.snp  header.txt
tests/: readReftable.R  tests.R
tests/datasets/MER/estimparam/IndSeq/: headerRF.txt
tests/datasets/MER/modelchoice/PoolSeq/: poolseq_sim_dataset_4POP_cov100_001.snp
tests/datasets/bench/: INDSNP_sim_dataset_4POP_001.snp
tests/datasets/depindep/: depindep_fast_1to10_param_S2.txt  yellow_depindep_fast_1to10_param_S2_ref_table.txt
tests/datasets/human/: header.txt
tests/datasets/sequences-mut/: 4pops_11loci_1mito.txt  header.txt
tests/testsdir/: testbench.R  testdepindep.R  testhuman.R  testsequences-mut.R
